Update UI and add medal images, modify ToString method
- Modified `ToString` in `Eredmeny.cs` to return `Nev` property only.
- Made `TextBox` elements read-only and added `Image` elements for medals in `MainWindow.xaml`.
- Added `EremInit` method in `MainWindow.xaml.cs` to initialize medal images.
- Updated `lbxNevek_SelectionChanged` to populate text boxes and set medal images.
- Added `PontszamHely` method to determine the highest score for a task.
- Updated `AssemblyInfo.cs` with a new assembly informational version.
- Modified various binary files due to source code and XAML changes.
- Updated `MainWindow.g.cs` and `MainWindow.g.i.cs` to reflect XAML changes.
- Updated `EredmenyekWPF.sourcelink.json` with a new commit hash.
- Updated `EredmenyekWPF_MarkupCompile.i.cache` to reflect XAML changes.
- Added binary data to `empty.jpg` and `silver.jpg` for image content.
- Added several auto-generated files and configurations for the WPF project.

--- a/EredmenyekWPF/EredmenyekWPF/MainWindow.xaml
+++ b/EredmenyekWPF/EredmenyekWPF/MainWindow.xaml
@@ -19,17 +19,30 @@
 
         <StackPanel Grid.Column="1" >
             <Label Content="Sorszám:"/>
-            <TextBox x:Name="tbxSorszam"   />
+            
+            <TextBox x:Name="tbxSorszam" IsReadOnly="True" />
+            
             <Label Content="Név:"/>
-            <TextBox Name="tbxNev"  />
-            <Label Content="Pontszám:"/>
-            <TextBox Name="tbxPontszam"  />
+            
+            <TextBox Name="tbxNev" IsReadOnly="True" />
+            
             <Label Content="1.feladat:"/>
-            <TextBox Name="tbx1Feladat"  />
+            
+            <TextBox Name="tbx1Feladat" IsReadOnly="True"  />
+            
+            <Image Name="imgMedal1" Width="30" Height="30" HorizontalAlignment="Left" Margin="5"/>
+            
             <Label Content="2.feladat:"/>
-            <TextBox Name="tbx2Feladat"  />
+            
+            <TextBox Name="tbx2Feladat" IsReadOnly="True" />
+            
+            <Image Name="imgMedal2" Width="30" Height="30" HorizontalAlignment="Left" Margin="5"/>
+            
             <Label Content="3.feladat:"/>
-            <TextBox Name="tbx3Feladat"   />
+            
+            <TextBox Name="tbx3Feladat" IsReadOnly="True"  />
+            
+            <Image Name="imgMedal3" Width="30" Height="30" HorizontalAlignment="Left" Margin="5"/>
 
 
         </StackPanel>
