Kötelező mezők ellenörzése a FelvetelWindowban , KijelentkezesWindow létrehozása , logika elkészítése , MainWindowban a kijelentkezes click esemeny letrehozasa

--- a/SzambevitelMezo/SzambevitelMezo/MainWindow.xaml
+++ b/SzambevitelMezo/SzambevitelMezo/MainWindow.xaml
@@ -15,7 +15,7 @@
             <MenuItem Header="Vendégek">
                 <MenuItem Header="Felvétel" Click="Felvetel_click" />
                 <Separator/>
-                <MenuItem Header="Kijelentkezés"/>
+                <MenuItem Header="Kijelentkezés" Click="Kijelentkezes_click" />
             </MenuItem>
             
         </Menu>
